shared/cubejs/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cubejs
  namespace: shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cubejs
  template:
    metadata:
      labels:
        app: cubejs
    spec:
      containers:
        - name: cubejs
          image: cubejs/cube:v1.6.29
          ports:
            - name: http
              containerPort: 4000
          volumeMounts:
            - name: config
              mountPath: /cube/conf

          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /livez
              port: http

      volumes:
        - name: config
          configMap:
            name: cubejs-config
