shared/cubejs/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cubejs
  namespace: shared
spec:
  selector:
    app: cubejs
  ports:
    - name: http
      port: 4000
      targetPort: http
