shared/cubejs/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cubejs-tls
  namespace: shared
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cube.justgui.dev`)
      kind: Rule
      services:
        - name: cubejs
          port: 4000
  tls:
    certResolver: letsencrypt
